src/k8/pod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-java
spec:
  selector:
    app: webapp-java
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
