src/k8/pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-java
  labels:
    app: webapp-java
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp-java
  template:
    metadata:
      name: webapp-java
      labels:
        app: webapp-java
    spec:
      containers:
        - name: webapp-java
          image: webapp:v1
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-java
spec:
  selector:
    app: webapp-java
  ports:
    - protocol: TCP
      port: 82
      targetPort: 8080
  type: ClusterIP
